tests/interpreter/errors/cast_type_mismatch.mochi
type Todo {
  title: string
}

let todo = {"title": 1} as Todo
